gitops/manifests/elasticsearch/base/rhel-edge-elasticsearch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhel-edge-elasticsearch
spec: {}
